--- a/Random Users/Base.lproj/Main.storyboard
+++ b/Random Users/Base.lproj/Main.storyboard
@@ -38,7 +38,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="rUt-yy-w5X" kind="show" identifier="ShowUser" trigger="accessoryAction" id="s3b-vr-peM"/>
+                                    <segue destination="rUt-yy-w5X" kind="show" identifier="ShowUser" trigger="accessoryAction" id="Xd2-oj-fvw"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -142,7 +142,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Lbt-jp-Fi8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="809" y="55"/>
+            <point key="canvasLocation" x="975" y="54"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="uVP-mq-dgd">
@@ -158,7 +158,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fjz-KG-cst" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-606" y="56"/>
+            <point key="canvasLocation" x="-743" y="55"/>
         </scene>
     </scenes>
 </document>
